--- a/hypertrend-frontend/package.json
+++ b/hypertrend-frontend/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.559.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
     "recharts": "^2.15.4",
